# koloda

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  dprint.json  drizzle.config.pgsql.ts  drizzle.config.sqlite.ts  drizzle.config.ts  lingui.config.ts  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.base.tsbuildinfo  tsconfig.json
apps/native-electron/src-rust/: Cargo.toml
apps/native-electron/src-rust/src/: lib.rs
apps/native-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/native-tauri/src-tauri/capabilities/: default.json
apps/native-tauri/src-tauri/src/: lib.rs  main.rs
apps/native-tauri/src-tauri/src/ai/: codex.rs
apps/native-tauri/src-tauri/src/app/: codex.rs  db.rs  error.rs  init.rs  mod.rs  secrets.rs  utility.rs
apps/native-tauri/src-tauri/src/commands/: ai.rs  algorithms.rs  cards.rs  conversations.rs  decks.rs  lessons.rs  mod.rs  reviews.rs  settings.rs  templates.rs
apps/native-tauri/src-tauri/src/domain/: ai.rs  cards.rs  lessons.rs  mod.rs  reviews.rs  settings.rs  settings_ai.rs  settings_hotkeys.rs  settings_learning.rs  templates.rs
apps/native-tauri/src-tauri/src/migrations/: mod.rs  (+2 more)
apps/native-tauri/src-tauri/tests/: ai_integration_tests.rs  ai_tests.rs  algorithms_fsrs_tests.rs  algorithms_integration_tests.rs  algorithms_tests.rs  cards_integration_tests.rs  cards_tests.rs  decks_tests.rs  e2e_learning_workflow_tests.rs  e2e_multi_deck_workflow_tests.rs  e2e_seed_workflow_tests.rs  lessons_integration_tests.rs  lessons_tests.rs  reviews_integration_tests.rs  reviews_tests.rs  secrets_tests.rs  seed_integration_tests.rs  settings_ai_tests.rs  settings_hotkeys_tests.rs  settings_integration_tests.rs  settings_interface_tests.rs  settings_learning_tests.rs  templates_integration_tests.rs  templates_tests.rs
crates/koloda-core/: Cargo.toml  README.md
crates/koloda-core/src/: lib.rs
crates/koloda-core/src/ai/: codex.rs
crates/koloda-core/src/app/: db.rs  error.rs  init.rs  secrets.rs  utility.rs
crates/koloda-core/src/domain/: ai.rs  algorithms.rs  algorithms_fsrs.rs  cards.rs  conversations.rs  decks.rs  lessons.rs  mod.rs  reviews.rs  settings.rs  settings_ai.rs  settings_hotkeys.rs  settings_interface.rs  settings_learning.rs  templates.rs
crates/koloda-core/src/migrations/: V3__medical_wrecking_crew.sql  V4__motionless_thaddeus_ross.sql
crates/koloda-core/src/repo/: ai.rs  conversations.rs  lessons.rs  mod.rs  reviews.rs  settings.rs
crates/koloda-core/tests/: ai_integration_tests.rs  ai_tests.rs  algorithms_fsrs_tests.rs  algorithms_integration_tests.rs  algorithms_tests.rs  cards_integration_tests.rs  cards_tests.rs  conversations_integration_tests.rs  conversations_tests.rs  db_integration_tests.rs  decks_tests.rs  e2e_learning_workflow_tests.rs  e2e_multi_deck_workflow_tests.rs  e2e_seed_workflow_tests.rs  lessons_integration_tests.rs  lessons_tests.rs  reviews_integration_tests.rs  reviews_tests.rs  secrets_tests.rs  seed_integration_tests.rs  settings_ai_tests.rs  settings_hotkeys_tests.rs  settings_integration_tests.rs  settings_interface_tests.rs  settings_learning_tests.rs  templates_integration_tests.rs  templates_tests.rs
crates/koloda-core/tests/common/: fixtures.rs  mod.rs
(+962 files in other folders)
