[package]
name = "koloda-core"
version = "0.0.1"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
refinery = { version = "0.8", features = ["rusqlite"] }
anyhow = "1.0"
rusqlite = { version = "0.33", features = ["bundled"] }
json-patch = "4.0"
strum = "0.27"
strum_macros = "0.27"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0.0"
windows-sys = { version = "0.61.2", features = ["Win32_Security_Credentials"] }
