[package]
name = "koloda-electron"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
koloda-core = { path = "../../../crates/koloda-core" }
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
