[package]
name = "koloda_native_tauri"
version = "0.0.1"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
refinery = { version = "0.8", features = ["rusqlite"] }
anyhow = "1.0"
rusqlite = { version = "0.33", features = ["bundled"] }
json-patch = "4.0"
strum = "0.27"
strum_macros = "0.27"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
