[package]
name = "koloda_native_tauri"
version = "0.0.1"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80.0"

[dependencies]
koloda-core = { path = "../../../crates/koloda-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-decorum = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-cors-fetch = "5.0.0"

[dev-dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }
